# ValentineAssembler

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
docs/: Instructions.txt  Internal.txt  test1.val
docs/test/: allLod.val  basic.val
docs/test/fib/: build.sh  main.val
docs/test/os/: const.val  malloc.val  os.val
docs/test/stdlib/: reset_carry.val  save_return.val
include/: universalGetopt.cpp  universalGetopt.hpp
src/: main.cpp
src/instructions/: ADD.cpp  ADD.hpp  BRA.cpp  BRA.hpp  CMP.cpp  CMP.hpp  Instruction.hpp  InstructionLibrary.hpp  JMP.cpp  JMP.hpp  LOD.cpp  LOD.hpp  MOV.cpp  MOV.hpp  POL.cpp  POL.hpp  PSH.cpp  PSH.hpp  PUL.cpp  PUL.hpp  STP.cpp  STP.hpp  STR.cpp  STR.hpp
src/instructions/include/: InlineSubroutineInstruction.hpp  Instruction.hpp  InstructionLibrary.hpp  SingleInstruction.hpp
src/instructions/settings/: internal.hpp  opcodes.hpp  parameters.hpp  sizes.hpp
src/instructions/singles/: ADD.hpp  ASL.hpp  ASR.hpp  BOR.hpp  CMP.hpp  LDP.hpp  LDS.hpp  MPC.hpp  NOP.hpp  NOT.hpp  ROL.hpp  ROR.hpp  STP.hpp  STS.hpp  SUB.hpp  XOR.hpp
src/parameters/: Flag.cpp  Flag.hpp  Register.hpp  SubroutineAddress.cpp  SubroutineAddress.hpp  Value.hpp
src/parameters/include/: Parameter.hpp  ParameterLibrary.hpp
src/parsing/: Flag.hpp  Parser.cpp  Parser.hpp  Register.cpp  Register.hpp  Subroutine.cpp  Subroutine.hpp  SubroutineAddress.hpp  Value.cpp  Value.hpp
src/parsing/exceptions/: AddressIsNeverDefined.cpp  AddressIsNeverDefined.hpp
src/parsing/include/: Parameter.hpp
src/preprocessor/: Preprocessor.cpp  Preprocessor.hpp
src/processors/: Compiler.cpp  Compiler.hpp  Preprocessor.cpp  Preprocessor.hpp
src/util/: Address.cpp  Address.hpp  Binary.cpp  Binary.hpp  ByteBuilder.cpp  ByteBuilder.hpp  DerivedConcept.hpp  Parser.cpp  Parser.hpp  Printer.cpp  Printer.hpp  Program.cpp  Program.hpp  Subroutine.cpp  Subroutine.hpp
src/util/templates/: ByteBuilder.hpp
